add tests of DataTransforms.scala